# fork_agent

./: .coverage  .env.sample  .gitignore  .gitleaks.toml  .kilocodemodes  .mypy.ini  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEOWNERS  GEMINI.md  INFORME_AUTORESEARCH.md  Makefile  PLAN-pi-teams-adoption.md  PLAN-trifecta-integration.md  README.md  agents.md  autoresearch.checks.sh  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  autoresearch.sh  coverage.json  default.nix  ecosystem.config.cjs  flake.nix  opencode.json  pi-session-2026-04-25T03-21-20-273Z_019dc2a7-f490-714b-bfa2-bf207d4b4713.html  pyproject.toml  requirements.txt
.claude/commands/: all_skills.md  prime.md
.claude/docs/: agent_checkout_summary.md  agent_checkout_usage.md  agent_checkout_validation.md  fork_summary_user_prompts_summary.md  fork_terminal_tools_summary.md  prime_summary.md
.claude/scripts/: fork_agent_with_checkout.sh  generate_agent_summary.py  ide_tmux.sh  monitor_agents.sh  test_zellij_fork.py
.claude/tmp/: verification_eval_layout.kdl  zellij_agents_layout.kdl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  pr-checks.yml  release.yml  runtime-integration.yml
.hooks/: git-branch-guard.sh  hooks.json  memory-trace-writer.sh  tmux-session-per-agent.sh  workflow-event-handler.sh  workspace-init.sh
.idx/: dev.nix
.kilocode/rules/: superpowers-bootstrap.md  superpowers-session-handoff.md
.kilocode/sessions/: handoff.md
.opencode/: manual_v0.1.md
.opencode/command/: fork-checkpoint.md  fork-init.md  fork-prune-sessions.md  fork-resume.md  prune-sessions.md  resume.md
.opencode/plugin/: session-end.ts
.pi-lens/: metrics-history.json  turn-state.json  worklog.jsonl
.pi-lens/cache/: jscpd.json  jscpd.meta.json  knip.meta.json  python-rules-v1.json  session-start-guidance.meta.json  todo-baseline.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json  turn-end-findings.meta.json  typescript-rules-v1.json
.pi/checkpoints/: 2026-02-27-post-sprint-review.md  2026-02-27T15-49-35-079Z-memory-refactor-card.md  2026-02-27T15-49-35-079Z-memory-refactor-checklist.md  2026-02-27T19-35-00-000Z-memory-refactor-checklist.md  2026-02-27T20-15-00-000Z-memory-refactor-checklist.md  2026-02-27T20-45-00-000Z-memory-refactor-final.md  2026-02-27T21-30-00-000Z-memory-refactor-fase3-complete.md  2026-02-27T22-00-00-000Z-memory-refactor-complete.md  index.md
.pi/plan/: fix-messaging-security.md  fixes-pending.md  memory-event-spine.md  zombie-session-gc.md
.sisyphus/: boulder.json
.stash/: code_review_prompt.md  coverage_analysis.md  handoff_prompt.md  install_superpowers_task.md  silenced_failures_report.md  superpowers_install_report.md  validation_tests_report.md
.stash/code_reviews/: review_20260222_033000.md  session_review_20260222.md
.tmp/: migrate_skills.sh
.tmux-orchestrator/: schedule_check.sh  send-opencode-message.sh
_ctx/review_runs/: current.json
another/: path.db
artifacts/: junit-bughunt.xml
config/: agent_config.json
custom/: path.db
docs/: API_GUIDE.md  CONTRIB.md  RUNBOOK.md  agent1_bugs_summary.md  agent2_changes_summary.md  agent3_verdict_summary.md  analysis_codebase_cookbook.md  analysis_codebase_core.md  analysis_codebase_spec.md  analysis_deps_nix_default.md  analysis_deps_nix_flake.md  analysis_deps_python.md  analysis_docs_config.md  analysis_docs_readme.md  analysis_docs_vision.md  contrainforme_phase1_corrections.md  conventional-commit-debt.md  counter_report.md  engram-feature-map-2026-04-17.md  engram-parity-roadmap.md  engram-vs-ours-memory-diff-2026-04-17.md  executive_summary_9agent_analysis.md  fix_codebase_cookbooks.md  fix_dependencies_pinning.md  fix_dependencies_security_audit.md  fix_documentation_prerequisites.md  fix_security_command_injection.md  gentle-ai-diff-2026-04-17.md  global_usage_analysis.md  governance-integration-research.md  hybrid-mode.md  integration_analysis.md  mcp-setup.md  memory_analysis.md  nix_installation_test_report.md  telemetry-system-design.md  test_echo.txt  test_file_creation.md  test_gemini_analysis.md  test_zellij_summary.md  (+6 more)
docs/adr/: 001-tmux-control-sidecar.md  ADR-001-agent-identity.md  ADR-002-skill-repo-boundary.md
docs/api/: openapi-spec.yaml
docs/exploracion/: 01-workflow-gaps.md  02-tmux-integration.md  03-memory-system.md  04-worktrees-gaps.md  05-hooks-system.md  06-integration-matrix.md  README.md
docs/governance/: QUALITY-GATES-MINIMUM.md  SKILL-REPO-BOUNDARY-GATE.md
docs/guides/: CONTRIB.md  RUNBOOK.md  pm2-fork-agent-api.md  user-guide-scoping.md
docs/informes/: ARCHITECTURE.md  CROSS-ANALYSIS-GSD-FORK-AGENT.md  DECISION-GAPS.md  EXPLORATION-DECISION-INPUTS.md  FAILURE_MODES.md  GSD-ANALYSIS.md  GSD-IDEAS-FORK-AGENT.md  (+4 more)
explore/: context.md
scripts/: bench_spawn.sh  benchmark.py  benchmark_skill_quality.py  com.fork-agent.tmux-control.plist  explorer-stats  fork-generate.sh  fork-verify.sh  test-fork-launch-cli.bats  test_fork_verify.sh  tmux_health_gate.sh  trifecta-read.sh  trifecta-sync.sh  trifecta_health.sh
src/: __init__.py
tests/: bughunt_messaging.py  chaos_messaging.py  conftest.py  run_bug_hunt.sh  test_bug_detection.py
(+720 files in other folders)
