[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fork_agent"
version = "0.1.0"
description = "Plataforma agéntica avanzada para terminal"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "fork_agent Team"}
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "dependency-injector>=4.41.0",
    "pyyaml>=6.0.0",
    "click>=8.0.0",
    "typer>=0.9.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.0.0",
]

[project.scripts]
memory = "src.interfaces.cli.main:app"
fork = "src.interfaces.cli.fork:run_cli"
fork-api = "src.interfaces.api.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "ruff>=0.3.0",
    "black>=24.0.0",
    "hypothesis>=6.90.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short -p no:warnings"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "**/__init__.py",
    "**/conftest.py",
    "**/.venv/*",
    "**/migrations/*",
    "**/interfaces/api/**",
    "**/tmux_orchestrator/**",
    "**/config/**",
    "**/domain/ports/*",
    "**/infrastructure/persistence/**",
    "**/application/services/orchestration/specs.py",
    "**/application/services/workspace/hook_runner.py",
    "**/application/services/workspace/workspace_manager.py",
    "**/application/services/messaging/**",
    "**/infrastructure/platform/**",
    "**/interfaces/cli/workspace_commands.py",
    "**/interfaces/cli/messaging_commands.py",
    "**/interfaces/cli/main.py",
]
pythonpath = ["."]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "def __repr__",
    "raise NotImplementedError",
]
show_missing = true
fail_under = 95
precision = 2

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
disallow_any_unimported = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
no_implicit_reexport = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "C4",
    "ARG",
    "SIM",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
extend_exclude = "\\.git|__pycache__|\\.tox|\\.venv|\\.env"

[tool.isort]
profile = "black"
line-length = 100
skip = [".venv", "venv"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
